--- a/react/18-rxjs/src/pages/page.module.scss
+++ b/react/18-rxjs/src/pages/page.module.scss
@@ -1,13 +1,16 @@
-.list {
-  margin: 0;
-  padding: 0;
+.page {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  min-height: 100vh;
+  background-color: #eee;
 }
 
-.todo-list {
+.page__inner {
+  padding-top: 5rem;
   width: 500px;
-  height: 100vh;
+  min-height: 100vh;
   background-color: white;
   border-left: 1px solid lightgray;
   border-right: 1px solid lightgray;
