fix(store): 제대로 추가되지 않는 현상을 수정한다
- 원인: `initialState`로 변경했기 때문이었다.
- 해결: Subject에서 갖고 있는 데이터 스트림을 기반으로 변경했다.

--- a/react/18-rxjs/src/pages/page.module.scss
+++ b/react/18-rxjs/src/pages/page.module.scss
@@ -15,3 +15,13 @@
   border-left: 1px solid lightgray;
   border-right: 1px solid lightgray;
 }
+
+
+.todo-form {
+  display: flex;
+  justify-content: center;
+}
+
+.todo-form__form-button {
+  margin-left: 0.5rem;
+}
