--- a/react/18-rxjs/src/components/List/list.module.scss
+++ b/react/18-rxjs/src/components/List/list.module.scss
@@ -6,8 +6,8 @@
 }
 
 .todo-list {
-  width: 500px;
+  width: 420px;
+  margin: 0 auto;
+  margin-top: 2rem;
   background-color: white;
-  border-left: 1px solid lightgray;
-  border-right: 1px solid lightgray;
 }
