feat(component): input이 추가 후 초기화되는 기능을 구현하고 버튼을 생성한다

--- a/react/18-rxjs/src/components/Card/todo-card.module.scss
+++ b/react/18-rxjs/src/components/Card/todo-card.module.scss
@@ -12,6 +12,19 @@
   padding: 0 1rem;
 
   input {
+    fill: red;
     margin-right: 1rem;
+    background-color: red;
+  }
+  .card__remove-button {
+    outline: none;
+    background-color: transparent;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    color: red;
+    margin-left: auto;
   }
 }
