--- a/react/18-rxjs/src/components/Card/todo-card.module.scss
+++ b/react/18-rxjs/src/components/Card/todo-card.module.scss
@@ -17,6 +17,8 @@
     background-color: red;
   }
   .card__remove-button {
+    cursor: pointer;
+
     outline: none;
     background-color: transparent;
     border: none;
