feat(api): add API and render by using server-components
- Next.js 13버전 에서는 Error 처리에 관한 인터페이스와 loading을 제공한다.
- https://beta.nextjs.org/docs/data-fetching/fetching#static-data-fetchingmd
- https://beta.nextjs.org/docs/routing/error-handling

--- a/next/13-jotai-react-query/styles/globals.css
+++ b/next/13-jotai-react-query/styles/globals.css
@@ -17,6 +17,15 @@ a {
   box-sizing: border-box;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: 1;
+  margin: 0;
+}
 /**
   * Next13
   * If you navigate inside nested layouts, Next.js needs to restore the scroll position or scroll the loaded element into view.
