feat(css-style): added basic style with form logic

--- a/next/13-indexeddb/styles/Home.module.css
+++ b/next/13-indexeddb/styles/Home.module.css
@@ -28,3 +28,25 @@
   display: flex;
   align-items: center;
 }
+
+.todo-list {
+  margin-top: 32px;
+  width: 300px;
+  list-style: none;
+  background-color: #752bed;
+}
+
+.todo-list__item {
+  width: 100%;
+  color: white;
+  padding: 16px 0;
+
+}
+.todo-list__item:not(:last-of-type) {
+  border-bottom: 1px solid white;
+}
+
+.todo-list__item:hover {
+  cursor: pointer;
+  background-color: #a167ff;
+}
